# Knotcoin

./: .gitignore  AUDIT_RESPONSE.md  BITCOINTALK_POST.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_JOURNEY.md  GOVERNANCE.md  INSTALL.md  LICENSE  Makefile  PUBLISHED.md  README.md  RELEASE_v1.0.0.md  SECURITY.md  SECURITY_AUDIT_v1.0.1.md  SECURITY_FIXES_v1.0.1.md  TOKENOMICS.md  UPDATE_RELEASE_INSTRUCTIONS.md  build.rs  build.sh  build_all_packages.sh  build_release.sh  build_release_all_platforms.sh  build_simple_dmg.sh  com.knotcoin.seed.plist  knotcoin-cli  package_native.sh  rust-toolchain.toml  start_knotcoin.sh  test_fips  windsurf-diagnostics.txt
.github/workflows/: ci.yml  release.yml
contrib/: build_linux.sh  build_mac.sh  install.sh  test_gossip_local.sh
electron/: icon.icns  main.js  package.json  preload.js  renderer.html
electron/binaries/: README.txt
releases/v1.0.2/macos-apple-silicon/: knotcoin-cli
scripts/: audit_chain.py  install-seed-node-linux.sh  install-seed-node-windows.bat  install-seed-node.sh  knotcoind-guard.sh
share/explorer/: app.js  debug.html  debug2.js  debug_test.html  index.html  knotcoin_app.js  knotcoin_app_new.js  knotcoin_simple.js  knotcoin_style.css  package-lock.json  package.json  server.js  style.css  test.html  whitepaper.html
src/: config.rs  lib.rs  main.rs
src/consensus/: chain.rs  genesis.rs  mod.rs  state.rs
src/crypto/: dilithium.rs  encrypt.rs  hash.rs  keys.rs  mod.rs  wordlist.rs
src/miner/: miner.rs  mod.rs
src/net/: mempool.rs  mod.rs  node.rs  protocol.rs
src/node/: db.rs  db_common.rs  db_rocksdb.rs  db_rocksdb_stress_tests.rs  mod.rs
src/primitives/: block.rs  transaction.rs
src/rpc/: server.rs
src/wallet/: file.rs  keystore.rs  mod.rs
test_seed/: Cargo.toml
test_seed/src/: main.rs
tests/: integration_rocksdb.rs  smoke_rpc.rs
(+12 files in other folders)
